started class for libOvr's distortion mesh (does not render yet)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,7 +49,7 @@ set(sources
     fbo.cpp
     simple_file.cpp
 #    syphon_server.mm
-    )
+        hmd_dist_mesh.cpp hmd_dist_mesh.h)
 
 add_executable(${target} ${sources} main.cpp)
 target_link_libraries(${target} ${libs})
