bring in assimp to build system and create a test target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,12 +3,14 @@ set(target gltest)
 
 # hacks (should figure out how to do properly/why it doesnt work)
 set(GLFW3_DIR "/usr/local/lib/cmake/glfw/")
+set(assimp_DIR "/usr/local/Cellar/assimp/3.3.1/lib/cmake/")
 set(CMAKE_CXX_FLAGS "-std=c++11 -stdlib=libc++")
 # end hacks
 
 find_package(OpenGL REQUIRED)
 find_package(GLFW3 REQUIRED)
 find_package(glbinding REQUIRED)
+find_package(assimp REQUIRED)
 
 set(GLM_INCLUDE_DIR "/usr/local/include/glm")
 set(GLOG_LIBRARY "/usr/local/opt/glog/lib/libglog.dylib")
@@ -18,6 +20,7 @@ include_directories(
     ${GLFW3_INCLUDE_DIR}
     ${GLBINDING_INCLUDE_DIR}
     ${GLM_INCLUDE_DIR}
+    ${ASSIMP_INCLUDE_DIR}
     /usr/local/Cellar/stk/4.5.0/include/stk/
     /usr/local/Cellar/liblo/0.28/include/
     /Users/jrsa/Downloads/OculusSDK/LibOVR/Include
@@ -32,14 +35,16 @@ set(libs
     ${GLFW3_LIBRARY}
     ${GLBINDING_LIBRARY}
     ${GLOG_LIBRARY}
-    /opt/rtaudio/librtaudio.dylib
-    /usr/local/Cellar/stk/4.5.0/lib/libstk.a
+        /usr/local/Cellar/assimp/3.3.1/lib/libassimp.3.3.1.dylib
+#    /opt/rtaudio/librtaudio.dylib
+#    /usr/local/Cellar/stk/4.5.0/lib/libstk.a
 #    "/Library/Frameworks/Syphon.framework"
-    /usr/local/Cellar/liblo/0.28/lib/liblo.dylib
+#    /usr/local/Cellar/liblo/0.28/lib/liblo.dylib
     /Users/jrsa/Downloads/OculusSDK/LibOVR/Lib/Mac/Debug/libovr.a
     /System/Library/Frameworks/Cocoa.framework
     /System/Library/Frameworks/IOKit.framework
 )
+
 
 set(sources
 
@@ -68,3 +73,6 @@ set_target_properties(${target}
 add_executable(meshtest glfw_app.cpp shader.cpp meshtest.cpp)
 target_link_libraries(meshtest ${libs})
 target_compile_options(meshtest PRIVATE ${DEFAULT_COMPILE_FLAGS})
+
+add_executable(imptest imp.cpp)
+target_link_libraries(imptest ${libs})
