--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,3 +89,26 @@ set_target_properties(${target}
         LINK_FLAGS_DEBUG            "${DEFAULT_LINKER_FLAGS_DEBUG}"
         LINK_FLAGS_RELEASE          "${DEFAULT_LINKER_FLAGS_RELEASE}"
         DEBUG_POSTFIX               "d${DEBUG_POSTFIX}")
+
+
+set(target fbloop)
+
+add_executable(${target}
+        fbloop.cpp
+        fbo.cpp
+        billboard.cpp
+        shader.cpp
+        glfw_app.cpp
+        simple_file.cpp
+        )
+target_link_libraries(${target} ${libs})
+target_compile_options(${target} PRIVATE ${DEFAULT_COMPILE_FLAGS})
+set_target_properties(${target}
+        PROPERTIES
+        LINKER_LANGUAGE              CXX
+        FOLDER                      "${IDE_FOLDER}"
+        COMPILE_DEFINITIONS_DEBUG   "${DEFAULT_COMPILE_DEFS_DEBUG}"
+        COMPILE_DEFINITIONS_RELEASE "${DEFAULT_COMPILE_DEFS_RELEASE}"
+        LINK_FLAGS_DEBUG            "${DEFAULT_LINKER_FLAGS_DEBUG}"
+        LINK_FLAGS_RELEASE          "${DEFAULT_LINKER_FLAGS_RELEASE}"
+        DEBUG_POSTFIX               "d${DEBUG_POSTFIX}")
