add point example and update readme

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -112,3 +112,12 @@ target_link_libraries(imptest ${libs})
 add_executable(conftest conf/read.cc)
 target_link_libraries(conftest /usr/local/lib/libyaml.a)
 
+add_executable(point
+    point.cpp
+    glfw_app.cpp
+    shader.cpp
+    fbo.cpp
+    billboard.cpp)
+
+target_link_libraries(point ${libs})
+
