update ovr rendering test, still doesnt work

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,7 +55,10 @@ set(sources
     particle_buffer.cpp
 )
 
-add_executable(meshtest glfw_app.cpp shader.cpp meshtest.cpp)
+add_executable(meshtest glfw_app.cpp shader.cpp meshtest.cpp 
+    billboard.cpp 
+    fbo.cpp
+)
 target_link_libraries(meshtest ${libs})
 target_compile_options(meshtest PRIVATE ${DEFAULT_COMPILE_FLAGS})
 
