here it goes boys

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,30 @@
 cmake_minimum_required(VERSION 3.3)
 set (CMAKE_CXX_STANDARD 11)
 
+# rebasing these in... not sure how necessary
+set(glbinding_DIR "/usr/local/Cellar/glbinding/2.1.4/")
+
 find_package(glfw3 REQUIRED)
 find_package(glbinding REQUIRED)
 find_package(glm REQUIRED)
 
 # on arch, the glogConfig.cmake script is not packaged with glog :/
-#find_package(glog REQUIRED)
-set(GLOG_LIBRARY "/usr/lib/libglog.so")
+# set(GLOG_LIBRARY "/usr/lib/libglog.so")
+# set(libs PUBLIC glbinding::glbinding glfw ${GLOG_LIBRARY})
 
-set(libs PUBLIC glbinding::glbinding glfw ${GLOG_LIBRARY})
+find_package(glog REQUIRED)
+set(libs PUBLIC glbinding::glbinding glfw glog::glog
+    # if i wasnt a lazy asshole i would just write a cmake script to pull this in ._.
+    /Users/jrsa/Desktop/OculusSDK/LibOVR/Lib/Mac/Release/libovr.a
+    /System/Library/Frameworks/Cocoa.framework
+    /System/Library/Frameworks/IOKit.framework
+    )
 
-include_directories(${CMAKE_CURRENT_SOURCE_DIR})
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}
+    /usr/local/include
+    # ditto for this, lazy asshole
+    /Users/jrsa/Desktop/OculusSDK/LibOVR/Include
+    )
 
 # will be made into the library compilation target
 set(shared_sources
@@ -54,6 +67,16 @@ add_executable(${target}
 target_link_libraries(${target} ${libs})
 
 set(target q)
+add_executable(${target}
+    ${target}.cpp
+    billboard.cpp
+    glfw_app.cpp
+    shader.cpp
+)
+target_link_libraries(${target} ${libs})
+
+
+set(target meshtest)
 add_executable(${target}
     ${target}.cpp
     billboard.cpp
