draw two distortion meshes
* correctly use a vertex array object for each mesh
* some cleanup (and some cruft added, unfortunately)
* vertex positions array was sized using an uninitialized variable...
  causing mysterious crashes

--------------------------------------------------------------------------------
  i did a lot of work on this, after forgetting that i was in the
  middle of a rebase, so a lot of "change info" is lost (12-Aug-2020),
  but at least i didnt delete the changes -_-

  actually, the `meshtest.cpp` delta is somewhat useful. the gist of it
  is that i am now uploading the entire distortion mesh into the
  graphics card and using vertex attributes to separate the "screen
  space" positions from the texcoords, also known as "TanEyeAngles" in
  the oculus lib. i also copied code from `box.cpp` which just draws a
  rainbow colored spinning cube.

  this definitely needs a lot of work but it looks reasonable so far. i
  wouldnt actually view it through the hmd at this stage since there is
  no per-eye view matrix translation applied yet.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.3)
 set (CMAKE_CXX_STANDARD 11)
 
 # rebasing these in... not sure how necessary
+set(CMAKE_BUILD_TYPE "Debug")
 set(glbinding_DIR "/usr/local/Cellar/glbinding/2.1.4/")
 
 find_package(glfw3 REQUIRED)
@@ -82,5 +83,6 @@ add_executable(${target}
     billboard.cpp
     glfw_app.cpp
     shader.cpp
+    fbo.cpp
 )
 target_link_libraries(${target} ${libs})
